# QGeoView

./: .gitignore  CMakeLists.txt  QGVCamera_8h_source.html  QGVDrawItem_8h_source.html  QGVGlobal_8h_source.html  QGVImage_8h_source.html  QGVItem_8h_source.html  QGVLayerBing_8h_source.html  QGVLayerGoogle_8h_source.html  QGVLayerOSM_8h_source.html  QGVLayerTilesOnline_8h_source.html  QGVLayerTiles_8h_source.html  QGVLayer_8h_source.html  QGVMapQGItem_8h_source.html  QGVMapQGView_8h_source.html  QGVMapRubberBand_8h_source.html  QGVMap_8h_source.html  QGVProjectionEPSG3857_8h_source.html  QGVProjection_8h_source.html  QGVWidgetCompass_8h_source.html  QGVWidgetScale_8h_source.html  QGVWidgetText_8h_source.html  QGVWidgetZoom_8h_source.html  QGVWidget_8h_source.html  annotated.html  classQGVCameraActions-members.html  classQGVCameraActions.html  classQGVDrawItem-members.html  classQGVDrawItem.html  classQGVImage-members.html  classQGVImage.html  classQGVItem.html  classQGVLayer.html  classQGVLayerBing-members.html  classQGVLayerBing.html  classQGVLayerGoogle-members.html  classQGVLayerGoogle.html  classQGVLayerOSM-members.html  classQGVLayerOSM.html  classQGVLayerTiles-members.html  (+15 more)
demo/: CMakeLists.txt  mainwindow.cpp  resources.qrc
demo/samples/: geotiff.cpp  geotiff.h  measures.cpp  measures.h  mvtvectorlayer.cpp  mvtvectorlayer.h  tilting.cpp  tilting.h  vectorlayers.cpp  vectorlayers.h  vectortileslayers.cpp  vectortileslayers.h
lib/: CMakeLists.txt  resources.qrc
lib/include/QGeoView/: MVTUtils.h  QGVBallon.h  QGVDBFParser.h  QGVGeoTiffParser.h  QGVIcon.h  QGVJsonTileParser.h  QGVLayerESRI.h  QGVLayerFile.h  QGVLayerGeoJson.h  QGVLayerJsonTiles.h  QGVLayerShape.h  QGVLayerTilesOnline.h  QGVLine.h  QGVMVTParser.h  QGVMvtLayerTiles.h  QGVRasterLayer.h  QGVShapeIcon.h  QGVShapeLine.h  QGVShapePolygon.h  QGVTileParser.h  QGVUtils.h  QGVVectorTile.h  QGVVectorTilesOnline.h  QGVWidgetMeasure.h  QGVWidgetPerspective.h
lib/include/QGeoView/protobuf/: QGVMvtTypes.h  QGVMvtVectorTile.hpp
lib/resources/: POINT.dbf  POINT.shp  POINT.shx  POLYGON.dbf  POLYGON.shp  POLYGON.shx  POLYLINE.dbf  POLYLINE.shp  POLYLINE.shx  map.geojson  shapes.mvt
lib/src/: MVTUtils.cpp  QGVBallon.cpp  QGVDBFParser.cpp  QGVGeoTiffParser.cpp  QGVIcon.cpp  QGVJsonTileParser.cpp  QGVLayerESRI.cpp  QGVLayerFile.cpp  QGVLayerGeoJson.cpp  QGVLayerJsonTiles.cpp  QGVLayerShape.cpp  QGVLine.cpp  QGVMVTParser.cpp  QGVMap.cpp  QGVMapQGView.cpp  QGVMvtLayerTiles.cpp  QGVRasterLayer.cpp  QGVShapeIcon.cpp  QGVShapeLine.cpp  QGVShapePolygon.cpp  QGVTileParser.cpp  QGVUtils.cpp  QGVVectorTile.cpp  QGVVectorTilesOnline.cpp  QGVWidgetMeasure.cpp  QGVWidgetPerspective.cpp
search/: all_1.js  classes_0.js  classes_1.js
